[fix]: [PL-39107]: Adds support for custom content in async slack notification flow